// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/azure createPr() should create and return a PR object 1`] = `
Object {
  "displayNumber": "Pull Request #456",
  "number": 456,
  "pullRequestId": 456,
}
`;

exports[`platform/azure createPr() should create and return a PR object from base branch 1`] = `
Object {
  "displayNumber": "Pull Request #456",
  "number": 456,
  "pullRequestId": 456,
}
`;

exports[`platform/azure createPr() should create and return a PR object with auto-complete set 1`] = `
Object {
  "autoCompleteSetBy": Object {
    "id": 123,
  },
  "completionOptions": Object {
    "deleteSourceBranch": true,
    "squashMerge": true,
  },
  "createdBy": Object {
    "id": 123,
  },
  "displayNumber": "Pull Request #456",
  "pullRequestId": 456,
}
`;

exports[`platform/azure deleteLabel() Should delete a label 1`] = `
Array [
  Array [],
  Array [],
  Array [],
]
`;

exports[`platform/azure ensureComment adds comment if missing 1`] = `
Array [
  Array [
    Object {
      "comments": Array [
        Object {
          "commentType": 1,
          "content": "### some-subject

some
content",
          "parentCommentId": 0,
        },
      ],
      "status": 1,
    },
    "1",
    42,
  ],
]
`;

exports[`platform/azure ensureComment adds comment if missing 2`] = `Array []`;

exports[`platform/azure ensureComment does nothing if comment exists and is the same 1`] = `Array []`;

exports[`platform/azure ensureComment does nothing if comment exists and is the same 2`] = `Array []`;

exports[`platform/azure ensureComment does nothing if comment exists and is the same when there is no topic 1`] = `Array []`;

exports[`platform/azure ensureComment does nothing if comment exists and is the same when there is no topic 2`] = `Array []`;

exports[`platform/azure ensureComment updates comment if missing 1`] = `Array []`;

exports[`platform/azure ensureComment updates comment if missing 2`] = `
Array [
  Array [
    Object {
      "content": "### some-subject

some
new
content",
    },
    "1",
    42,
    4,
    2,
  ],
]
`;

exports[`platform/azure findPr(branchName, prTitle, state) returns pr if found it all state 1`] = `
Object {
  "number": 1,
  "sourceRefName": "refs/heads/branch-a",
  "state": "closed",
  "title": "branch a pr",
}
`;

exports[`platform/azure findPr(branchName, prTitle, state) returns pr if found it close 1`] = `
Object {
  "number": 1,
  "sourceRefName": "refs/heads/branch-a",
  "state": "closed",
  "title": "branch a pr",
}
`;

exports[`platform/azure findPr(branchName, prTitle, state) returns pr if found it open 1`] = `
Object {
  "number": 1,
  "sourceRefName": "refs/heads/branch-a",
  "state": "open",
  "title": "branch a pr",
}
`;

exports[`platform/azure findPr(branchName, prTitle, state) returns pr if found not open 1`] = `
Object {
  "number": 1,
  "sourceRefName": "refs/heads/branch-a",
  "state": "closed",
  "title": "branch a pr",
}
`;

exports[`platform/azure getBranchPr(branchName) should return the pr 1`] = `null`;

exports[`platform/azure getPr(prNo) should return a pr in the right format 1`] = `
Object {
  "isModified": false,
  "labels": Array [
    "renovate",
  ],
  "pullRequestId": 1234,
}
`;

exports[`platform/azure getPr(prNo) should return a pr thats been modified 1`] = `
Object {
  "isModified": true,
  "labels": Array [],
  "pullRequestId": 1234,
}
`;

exports[`platform/azure getPrBody(input) returns updated pr body 1`] = `"https://github.com/foo/bar/issues/5 plus also [a link](https://github.com/foo/bar/issues/5)"`;

exports[`platform/azure getRepos() should return an array of repos 1`] = `
Array [
  Array [],
]
`;

exports[`platform/azure getRepos() should return an array of repos 2`] = `
Array [
  "prj1/repo1",
  "prj1/repo2",
]
`;

exports[`platform/azure initPlatform() should init 1`] = `
Object {
  "endpoint": "https://dev.azure.com/renovate12345/",
}
`;

exports[`platform/azure initRepo should initialise the config for a repo 1`] = `
Array [
  Array [],
  Array [],
]
`;

exports[`platform/azure initRepo should initialise the config for a repo 2`] = `
Object {
  "baseBranch": "defBr",
  "isFork": false,
}
`;

exports[`platform/azure updatePr(prNo, title, body) should update the PR 1`] = `
Array [
  Array [
    Object {
      "description": undefined,
      "title": "The New Title",
    },
    "1",
    1234,
  ],
]
`;

exports[`platform/azure updatePr(prNo, title, body) should update the PR without description 1`] = `
Array [
  Array [
    Object {
      "title": "The New Title - autoclose",
    },
    "1",
    1234,
  ],
]
`;
